# HyperAgents-Locally-Kaggle-

./: .env.example  .gitignore  GEMINI.md  README.md  generate_loop_local.py  install.sh  meta_agent.py  pyproject.toml  requirements.txt  requirements_local.txt  requirements_mlx.txt  run_all_benchmarks.sh  run_kaggle_factory.sh  run_local_isolated.ps1  run_local_isolated.sh  run_meta_agent.py  setup_local.ps1  setup_local.sh  task_agent.py  tui.py
.github/workflows/: ci.yml
agent/: llm.py  llm_withtools.py
agent/tools/: bash.py  edit.py
domains/: harness.py  report.py
domains/emotion/: utils.py
domains/text_classify/: utils.py
kaggle_kernel/: README.md  kernel-metadata.json  run_factory.py
python/: loop.py  meta_agent.py  run_meta_agent.py
python/agent/: llm.py
python/agent/tools/: bash.py  edit.py
python/comms/: agents.py  loop.py  tasks.py
python/domains/: harness.py  report.py
python/domains/emotion/: dataset.py
python/domains/factory/: dataset.py  utils.py
python/domains/formwerk/: dataset.py  utils.py
python/utils/: git_utils.py
rust/: Cargo.toml
rust/src/: comms_main.rs  llm.rs  main.rs  main_loop.rs  progress.rs  runner.rs
rust/src/agent/: meta_agent.rs  mod.rs  task_agent.rs
rust/src/comms/: agents.rs  mod.rs  runner.rs  tasks.rs
rust/src/domains/: emotion.rs  factory.rs  harness.rs  mod.rs  report.rs  text_classify.rs
rust/src/tools/: bash.rs  edit.rs  mod.rs
rust/src/utils/: common.rs  git.rs  mod.rs  progress.rs
scripts/: build_kaggle_kernel.py  setup_kaggle.ps1
utils/: git_utils.py
(+3 files in other folders)
