[package]
name = "hyperagents"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyperagents"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
rayon = "1"
